Change tab1 to awesome

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-  "appId": "io.ionic.starter",
+  "appId": "com.mattkremer.testing1",
   "appName": "Kremers Test App",
   "bundledWebRuntime": false,
   "npmClient": "npm",
