--- a/ios/App/App/Info.plist
+++ b/ios/App/App/Info.plist
@@ -73,5 +73,17 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
+	<key>IonUpdateMethod</key>
+  	<string>$UPDATE_METHOD</string>
+	<key>IonApi</key>
+  	<string>$UPDATE_API</string>
+	<key>IonChannelName</key>
+  	<string>$CHANNEL_NAME</string>
+	<key>IonMinBackgroundDuration</key>
+  	<string>$MIN_BACKGROUND_DURATION</string>
+	<key>IonMaxVersions</key>
+  	<string>$MAX_STORE</string>
+	<key>IonAppId</key>
+  	<string>$APP_ID</string>
 </dict>
 </plist>
